fix: fix overflow style on mobile

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -57,7 +58,7 @@ body{
 
 /* ------------------------CARD------------------------ */
 .card{
-    min-width: 500px;
+    min-width: 275px;
     width: 550px;
     height: 380px;
 
@@ -133,7 +134,7 @@ body{
 .description{
     margin-top: 10px;   
     text-align: center;
-
+    max-width: 275px;
     font-size: 0.9rem;
 }
 
@@ -240,28 +241,29 @@ body{
 
 @media screen and (max-width:500px) {
     body{        
-        height: 100vh;
+        height: 100%;
        
     }
     .card{
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: var(--Mobile-size);
-        height: 100vh;  
-             
+        width: 100%;
+        height: 100%;  
+        border-radius: 0px;
        
     }
-    .card-left{
-        width: 50%;
-
-        border-radius: 0 0 20px 20px;
-
+    .card .card-left{
+        width: 100%;
+        border: none;
+        -webkit-border-radius: 0px 0px 20px 20px;
+        -moz-border-radius: 0px 0px 20px 20px;
+        border-radius: 0px 0px 20px 20px;
         padding-top: 15px;
     }
 
     
     .card-right{
-        width: 50%;
+        width: 100%;
     }
 }
